Fix gap under image

--- a/src/style/projects.css
+++ b/src/style/projects.css
@@ -3,8 +3,23 @@
 }
 
 .project-image {
-  box-sizing: border-box;
   width: 100%;
-  height: 40px;
-  border: 2px solid red;
+  height: auto;
+  display: block;
+}
+
+.projects-heading {
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: normal;
+  font-size: 50px;
+  padding: 30px;
+  padding-bottom: 20px;
+}
+
+.project-blue {
+  background-color: #1a2236;
+}
+
+@media  screen and (min-width: 992px) {
+
 }
